kubernetes-templating/frontend/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production" 
spec:
  tls:
  - hosts:
    - shop.35.224.3.195.nip.io
    secretName: shop.35.224.3.195.nip.io
  rules:
  - host: shop.35.224.3.195.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort:  8080
